<resources>
    <string name="app_name">e-care</string>
    <string name="welcome_msg">Welcome to e-Care</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="forgot_password_msg">Forgot password?</string>
    <string name="login_btn_msg">Login</string>
    <string name="register_prompt_msg">REGISTER</string>
    <string name="account_prompt_msg">Don\'t have an account?</string>
    <string name="avatar_content_description">TODO</string>
    <string name="title_activity_registration">Registration</string>
    <string name="image_field_msg">upload photo</string>
    <string name="et_first_name_placeholder">First Name</string>
    <string name="et_surname_placeholder">Surname</string>
    <string name="et_clinic_placeholder">Hospital/Clinic</string>
    <string name="et_mobile_placeholder">Mobile</string>
    <string name="et_email_placeholder">Email</string>
    <string name="et_specialization_placeholder">Specialization</string>
    <string name="et_pass_1_placeholder">Password</string>
    <string name="et_pass_2_placeholder">Repeat Password</string>
    <string name="register_button_msg">Register</string>
    <string name="user_type_select_msg">Select type of userModel to continue</string>
    <string name="doctor_radio_placeholder">Doctor</string>
    <string name="patient_radio_placeholder">Patient</string>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>I would rather not say</item>
    </string-array>
    <string-array name="country_codes_array">
        <item>+971</item>
        <item>+972</item>
        <item>+974</item>
    </string-array>
    <string-array name="user_type_array">
        <item>Doctor</item>
        <item>Patient</item>
    </string-array>
    <string name="API_KEY">AIzaSyCRmqYouU2-m7fBSkSH8GIxyMOJrEKtit0</string>
    <string name="search_message">Address, practice or Dr\'s name</string>
    <string name="map_info_window_name">Dr Rajesh</string>
    <string name="map_info_window_address">Address</string>
    <string name="map_info_window_mobile">Mobile</string>
    <string name="map_info_window_tv_message">Click to make an Appointment</string>
    <string name="message_to_doctor">Message to doctor</string>
    <string name="appointment_back_button">Back</string>
    <string name="appointment_confirm_button">Confirm</string>
    <string name="title_book_appointment">Book Appointment</string>
    <string name="ev_appointment_doctor_s_name_msg">Doctor\'s Name</string>
    <string name="ev_appointment_specialization_msg">Specialization</string>
    <string name="ev_appointment_heading_msg">Request for Appointment</string>
    <string name="appointment_fab_msg">Confirm Appointment</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_login">Login</string>
    <string name="menu_history">My Appointments</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="app_image_content_desc">Profile Image Content Desc</string>
    <string name="profile_username">User Name</string>
    <string name="profile_profession">Profession</string>
    <string name="profile_email">User Email</string>
    <string name="profile_mobile">Phone Number</string>
    <string name="profile_name">Full Name</string>
    <string name="appointment_title">Appointment Title</string>
    <string name="appointment_description">Appointment Description</string>
    <string name="appointment_status_content_desc">Appointment Status Icon Content Desc</string>
    <string name="appointment_edit_content_desc">Edit Icon Content Desc</string>
    <string name="appointment_delete_content_desc">Delete Icon Content Desc</string>
    <string name="appointment_date">Date</string>
    <string name="submit">Delete Icon</string>
    <string name="select_new_date">Select new Date</string>
    <string name="et_profession_placeholder">Profession</string>
</resources>
