<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="200dp"
    android:baselineAligned="false"
    android:gravity="center"
    android:id="@+id/profile_head"
    android:background="@color/profile_head_color"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/profile_user_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:srcCompat="@drawable/ic_profile"
        android:contentDescription="@string/app_image_content_desc" />
    <TextView
        android:id="@+id/profile_user_name"
        android:layout_width="wrap_content"
        android:text="@string/profile_username"
        android:textColor="#fff"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:textColor="#fff"
        android:text="@string/profile_profession"
        android:layout_height="wrap_content"/>
</LinearLayout>