<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/internal_padding"
    android:paddingTop="20dp"
    android:paddingRight="@dimen/internal_padding">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/circle"
        android:contentDescription="@string/avatar_content_description"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/male" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/welcome_msg"
        android:textSize="@dimen/big_heading_txt_size"
        app:layout_constraintEnd_toEndOf="@+id/avatar"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/avatar"
        app:layout_constraintTop_toBottomOf="@+id/avatar" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_name"
        android:drawableLeft="@drawable/ic_name"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/username_hint"
        android:includeFontPadding="false"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_password"
        android:drawableLeft="@drawable/ic_password"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password_hint"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/et_username"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_username"
        app:layout_constraintTop_toBottomOf="@+id/et_username" />

    <TextView
        android:id="@+id/txt_forgot_password_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/forgot_password_msg"
        android:textSize="@dimen/small_heading_txt_size"
        app:layout_constraintStart_toStartOf="@+id/et_password"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@drawable/rounded_btn"
        android:text="@string/login_btn_msg"
        app:layout_constraintEnd_toEndOf="@+id/et_password"
        app:layout_constraintStart_toStartOf="@+id/txt_forgot_password_msg"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/account_prompt_msg"
        android:textSize="@dimen/small_heading_txt_size"
        app:layout_constraintEnd_toEndOf="@+id/login_button"
        app:layout_constraintStart_toStartOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/register_prompt_msg"
        android:textColor="@color/important_msgs_color"
        android:textSize="@dimen/medium_heading_txt_size"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>