<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/textinput_background"
    android:padding="8dp"
    android:layout_margin="8dp"
    android:layout_height="150dp">

    <LinearLayout
        android:id="@+id/history_linear_layout_one"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/appointment_title"
            android:textColor="@color/orange_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/divider_bottom"
            android:text="@string/appointment_title" />

        <TextView
            android:id="@+id/appointment_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="always"
            android:text="@string/appointment_description" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/divider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profile_linear_layout_one"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/appointment_status_content_desc"
            android:layout_margin="@dimen/appointment_container_image_margin"
            app:srcCompat="@drawable/ic_status" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/appointment_edit_content_desc"
            app:srcCompat="@drawable/ic_edit" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:contentDescription="@string/appointment_delete_content_desc"
            app:srcCompat="@drawable/ic_delete" />
    </LinearLayout>

</LinearLayout>
