<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/user_type_select_msg"
        android:textSize="@dimen/medium_heading_txt_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/user_selection_radios"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/radio_doctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doctor_radio_placeholder" />

        <RadioButton
            android:id="@+id/radio_patient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patient_radio_placeholder" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>