<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ecareuae.e_care.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_frag_book_appointment"
            app:destination="@id/frag_book_appointment"
            app:popUpTo="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_login"
        android:name="com.ecareuae.e_care.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.ecareuae.e_care.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" >
        <action
            android:id="@+id/action_nav_history_to_frag_edit_appointment"
            app:destination="@id/frag_edit_appointment"
            app:popUpTo="@id/nav_history" />
    </fragment>

    <fragment
        android:id="@+id/frag_edit_appointment"
        android:name="com.ecareuae.e_care.ui.appointment_edit.AppointmentEditFragment"
        android:label="@string/edit_appointment"
        tools:layout="@layout/fragment_appointment_edit" />

    <fragment
        android:id="@+id/frag_book_appointment"
        android:name="com.ecareuae.e_care.ui.appointment_booking.BookAppointmentFragment"
        android:label="Book Appointment"
        tools:layout="@layout/fragment_book_appointment">
        <action
            android:id="@+id/action_frag_book_appointment_to_nav_history"
            app:destination="@id/nav_history"
            app:popUpTo="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.ecareuae.e_care.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/user_selection"
        android:name="com.ecareuae.e_care.ui.user_type_selection.UserTypeSelectionFragment"
        android:label="User Type Selection"
        tools:layout="@layout/fragment_user_type_selection"/>

    <fragment
        android:id="@+id/doctor_registration"
        android:name="com.ecareuae.e_care.ui.doctor_registration.DoctorRegistrationFragment"
        android:label="Doctor Registration"
        tools:layout="@layout/fragment_doctor_registration"/>

    <fragment
        android:id="@+id/normalUserRegistrationFragment"
        android:name="com.ecareuae.e_care.ui.normal_user_registration.NormalUserRegistrationFragment"
        android:label="NormalUserRegistrationFragment" />


</navigation>