<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".RegistrationActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <include
        android:id="@+id/include"
        layout="@layout/content_registration" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/internal_padding"
        android:paddingRight="@dimen/internal_padding"
        android:paddingBottom="@dimen/internal_padding">

        <ImageView
            android:id="@+id/user_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/items_margin_from_top"
            android:contentDescription="TODO"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/account_user" />

        <TextView
            android:id="@+id/tv_upload_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/image_field_msg"
            app:layout_constraintEnd_toEndOf="@+id/user_image"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="@+id/user_image"
            app:layout_constraintTop_toBottomOf="@+id/user_image" />

        <LinearLayout
            android:id="@+id/names_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/tv_upload_photo"
            app:layout_constraintStart_toStartOf="@+id/tv_upload_photo"
            app:layout_constraintTop_toBottomOf="@+id/tv_upload_photo">

            <EditText
                android:id="@+id/et_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/name_icon"
                android:drawableLeft="@drawable/name_icon"
                android:drawablePadding="@dimen/icon_padding"
                android:ems="10"
                android:hint="@string/et_first_name_placeholder"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_surname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/name_icon"
                android:drawableLeft="@drawable/name_icon"
                android:drawablePadding="@dimen/icon_padding"
                android:ems="10"
                android:hint="@string/et_surname_placeholder"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/et_first_name"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <EditText
            android:id="@+id/et_hospital"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/hospital_icon"
            android:drawableLeft="@drawable/hospital_icon"
            android:drawablePadding="@dimen/icon_padding"
            android:ems="10"
            android:hint="@string/et_clinic_placeholder"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/names_layout"
            app:layout_constraintStart_toStartOf="@+id/names_layout"
            app:layout_constraintTop_toBottomOf="@+id/names_layout" />

        <LinearLayout
            android:id="@+id/code_phone_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/et_hospital"
            app:layout_constraintStart_toStartOf="@+id/et_hospital"
            app:layout_constraintTop_toBottomOf="@+id/et_hospital">

            <Spinner
                android:id="@+id/number_prefix_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />

            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:drawableStart="@drawable/phone_icon"
                android:drawableLeft="@drawable/phone_icon"
                android:drawablePadding="@dimen/icon_padding"
                android:ems="10"
                android:hint="@string/et_mobile_placeholder"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="@+id/code_phone_layout"
                app:layout_constraintStart_toStartOf="@+id/number_prefix_spinner"
                app:layout_constraintTop_toBottomOf="@+id/code_phone_layout" />
        </LinearLayout>



        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/email_icon"
            android:drawableLeft="@drawable/email_icon"
            android:drawablePadding="@dimen/icon_padding"
            android:ems="10"
            android:hint="@string/et_email_placeholder"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@+id/code_phone_layout"
            app:layout_constraintStart_toStartOf="@+id/code_phone_layout"
            app:layout_constraintTop_toBottomOf="@+id/code_phone_layout" />

        <EditText
            android:id="@+id/et_specialization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/specialization_icon"
            android:drawableLeft="@drawable/specialization_icon"
            android:drawablePadding="@dimen/icon_padding"
            android:ems="10"
            android:hint="@string/et_specialization_placeholder"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/et_email"
            app:layout_constraintStart_toStartOf="@+id/et_email"
            app:layout_constraintTop_toBottomOf="@+id/et_email" />

        <Spinner
            android:id="@+id/gender_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/et_specialization"
            app:layout_constraintStart_toStartOf="@+id/et_specialization"
            app:layout_constraintTop_toBottomOf="@+id/et_specialization" />


        <EditText
            android:id="@+id/et_pass_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/password_icon"
            android:drawableLeft="@drawable/password_icon"
            android:drawablePadding="@dimen/icon_padding"
            android:ems="10"
            android:hint="@string/et_pass_1_placeholder"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/gender_spinner"
            app:layout_constraintStart_toStartOf="@+id/gender_spinner"
            app:layout_constraintTop_toBottomOf="@+id/gender_spinner" />

        <EditText
            android:id="@+id/et_pass_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/password_icon"
            android:drawableLeft="@drawable/password_icon"
            android:drawablePadding="@dimen/icon_padding"
            android:ems="10"
            android:hint="@string/et_pass_2_placeholder"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/et_pass_1"
            app:layout_constraintStart_toStartOf="@+id/et_pass_1"
            app:layout_constraintTop_toBottomOf="@+id/et_pass_1" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_btn"
            android:text="@string/register_button_msg"
            app:layout_constraintEnd_toEndOf="@+id/et_pass_2"
            app:layout_constraintStart_toStartOf="@+id/et_pass_2"
            app:layout_constraintTop_toBottomOf="@+id/et_pass_2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>